--- a/src/main/Model/Filter/StackedBarGraph/StackedBarGraphView.fxml
+++ b/src/main/Model/Filter/StackedBarGraph/StackedBarGraphView.fxml
@@ -13,7 +13,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <StackedBarChart layoutX="-75.0" layoutY="-33.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <StackedBarChart fx:id="StackedBarChart" layoutX="-75.0" layoutY="-33.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
