--- a/src/main/View/FxmlFiles/SubViews/FilesSubView.fxml
+++ b/src/main/View/FxmlFiles/SubViews/FilesSubView.fxml
@@ -84,7 +84,7 @@
                            </VBox.margin>
                         </Label>
                         <Separator prefWidth="200.0" />
-                        <Button mnemonicParsing="false" text="Remove file">
+                        <Button mnemonicParsing="false" text="Remove file" onAction="#RemoveFileButtonOnAction">
                            <VBox.margin>
                               <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
                            </VBox.margin>
