--- a/src/main/Model/Filter/StackedBarGraph/StackedBarGraphView.fxml
+++ b/src/main/Model/Filter/StackedBarGraph/StackedBarGraphView.fxml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
+<?import java.lang.*?>
+<?import javafx.scene.chart.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.StackedBarChart?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Model.Filter.StackedBarGraph.StackedBarGraphViewController">
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@/Resources/css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Model.Filter.StackedBarGraph.StackedBarGraphViewController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" layoutX="170.0" layoutY="68.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <StackedBarChart fx:id="StackedBarChart" layoutX="-75.0" layoutY="-33.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <StackedBarChart fx:id="StackedBarChart" categoryGap="2.0" layoutX="-75.0" layoutY="-33.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
@@ -61,6 +63,12 @@
                                 <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                 </VBox.margin></Slider>
+                        <Separator prefWidth="200.0" />
+                        <CheckBox fx:id="CIButton" mnemonicParsing="false" onAction="#CIButtonOnAction" text="Predict spending">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </CheckBox>
                         </children>
                     </VBox>
                 </children>
